# dubizzle-ai-car-assistant

./: .gitignore  README.md  client.ipynb  config.py  main.py  pyproject.toml
models/: schemas.py
services/: inventory.py  llm.py  user_memory.py
tests/: test_inventory.py
