[project]
name = "dubizzle_case_study"
version = "0.1.0"
description = "AI-powered assistant for exploring a used-car inventory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "google-genai>=2.11.0",
    "httpx",
    "openpyxl",
    "pandas",
    "pydantic",
    "python-dotenv",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
]
